--- a/src/lib/lang/en/index.json
+++ b/src/lib/lang/en/index.json
@@ -3,6 +3,7 @@
   "undo": "Undo",
   "redo": "Redo",
   "save": "Save",
+  "wordwrap": "Word Warp",
   "h1": "Heading 1",
   "h2": "Heading 2",
   "h3": "Heading 3",
